--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,3 +9,5 @@ License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
+URL: https://github.com/SchmidtPaul/CitaviR
+BugReports: https://github.com/SchmidtPaul/CitaviR/issues
