--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,3 +11,8 @@ LazyData: true
 RoxygenNote: 7.1.1
 URL: https://github.com/SchmidtPaul/CitaviR
 BugReports: https://github.com/SchmidtPaul/CitaviR/issues
+VignietteBuilder: knitr
+Imports: 
+    dplyr,
+    magrittr,
+    readxl
