--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,9 @@ VignietteBuilder: knitr
 Imports: 
     dplyr,
     magrittr,
-    readxl
+    readxl,
+    lifecycle
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+Roxygen: list(markdown = TRUE)
