--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,11 @@
 
 export("%>%")
 export(example_xlsx)
+export(find_obvious_dups)
 export(read_Citavi_xlsx)
 import(dplyr)
+importFrom(janitor,make_clean_names)
 importFrom(magrittr,"%>%")
 importFrom(readxl,read_xlsx)
+importFrom(stringr,str_pad)
+importFrom(stringr,str_remove_all)
