--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("%>%")
 export("%not_in%")
 export(example_xlsx)
 export(find_obvious_dups)
+export(handle_obvious_dups)
 export(read_Citavi_xlsx)
 import(dplyr)
 importFrom(janitor,make_clean_names)
@@ -11,4 +12,5 @@ importFrom(magrittr,"%>%")
 importFrom(readxl,read_xlsx)
 importFrom(stringr,str_pad)
 importFrom(stringr,str_remove_all)
+importFrom(tidyr,fill)
 importFrom(utils,tail)
