write_Citavi_xlsx

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,7 +20,8 @@ Imports:
     janitor,
     stringr,
     utils,
-    tidyr
+    tidyr,
+    openxlsx
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
