--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,9 +6,11 @@ export(example_xlsx)
 export(find_obvious_dups)
 export(handle_obvious_dups)
 export(read_Citavi_xlsx)
+export(write_Citavi_xlsx)
 import(dplyr)
 importFrom(janitor,make_clean_names)
 importFrom(magrittr,"%>%")
+importFrom(openxlsx,write.xlsx)
 importFrom(readxl,read_xlsx)
 importFrom(stringr,str_pad)
 importFrom(stringr,str_remove_all)
