Badge and tweaks

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,7 +21,8 @@ Imports:
     stringr,
     utils,
     tidyr,
-    openxlsx
+    openxlsx,
+    crayon
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
