appveyor & travis fix

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,8 +22,7 @@ Imports:
     utils,
     tidyr,
     openxlsx,
-    crayon,
-    devtools
+    crayon
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
