pls travis & appveyor!

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,7 +22,8 @@ Imports:
     utils,
     tidyr,
     openxlsx,
-    crayon
+    crayon,
+    remotes
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
