--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,12 +17,21 @@ environment:
   NOT_CRAN: true
   # env vars that may need to be set, at least temporarily, from time to time
   # see https://github.com/krlmlr/r-appveyor#readme for details
-  # USE_RTOOLS: true
+  USE_RTOOLS: true
   # R_REMOTES_STANDALONE: true
+
+notifications:
+  - provider: Email
+    to:
+      - schmidpaul@hotmail.de
+    on_build_success: false
+    on_build_failure: false
+    on_build_status_changed: false
 
 # Adapt as necessary starting from here
 
 build_script:
+  - travis-tool.sh install_github hadley/devtools
   - travis-tool.sh install_deps
 
 test_script:
