--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,8 +17,10 @@ environment:
   NOT_CRAN: true
   # env vars that may need to be set, at least temporarily, from time to time
   # see https://github.com/krlmlr/r-appveyor#readme for details
-  USE_RTOOLS: true
-  R_REMOTES_STANDALONE: true
+  # USE_RTOOLS: true
+  # R_REMOTES_STANDALONE: true
+
+# Adapt as necessary starting from here
 
 notifications:
   - provider: Email
@@ -27,8 +29,6 @@ notifications:
     on_build_success: false
     on_build_failure: false
     on_build_status_changed: false
-
-# Adapt as necessary starting from here
 
 build_script:
   - travis-tool.sh install_github hadley/devtools
