--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,15 +4,21 @@ export("%>%")
 export("%not_in%")
 export(example_xlsx)
 export(find_obvious_dups)
+export(find_potential_dups)
 export(handle_obvious_dups)
 export(read_Citavi_xlsx)
 export(write_Citavi_xlsx)
 import(dplyr)
+importFrom(RecordLinkage,levenshteinSim)
 importFrom(janitor,make_clean_names)
 importFrom(magrittr,"%>%")
 importFrom(openxlsx,write.xlsx)
 importFrom(readxl,read_xlsx)
+importFrom(scales,percent)
+importFrom(seplyr,group_indices_se)
 importFrom(stringr,str_pad)
 importFrom(stringr,str_remove_all)
 importFrom(tidyr,fill)
+importFrom(tidyr,pivot_longer)
+importFrom(utils,combn)
 importFrom(utils,tail)
