--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,8 +25,7 @@ Imports:
     crayon,
     remotes,
     RecordLinkage,
-    scales,
-    seplyr
+    scales
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
