prefer obvious duplicates with PDF as dup_01

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ importFrom(magrittr,"%>%")
 importFrom(openxlsx,write.xlsx)
 importFrom(readxl,read_xlsx)
 importFrom(scales,percent)
+importFrom(stringr,str_count)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_pad)
 importFrom(stringr,str_remove_all)
