#3 smarter handling of "Online Address"

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,5 +21,7 @@ importFrom(stringr,str_pad)
 importFrom(stringr,str_remove_all)
 importFrom(tidyr,fill)
 importFrom(tidyr,pivot_longer)
+importFrom(tidyr,separate_rows)
+importFrom(tidyr,unite)
 importFrom(utils,combn)
 importFrom(utils,tail)
