#3 Handling Categories/Groups/Keywords now eliminates duplicates and sorts alphabetically

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,7 +25,8 @@ Imports:
     crayon,
     remotes,
     RecordLinkage,
-    scales
+    scales,
+    purrr
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
