--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,12 +13,14 @@ importFrom(RecordLinkage,levenshteinSim)
 importFrom(janitor,make_clean_names)
 importFrom(magrittr,"%>%")
 importFrom(openxlsx,write.xlsx)
+importFrom(purrr,map)
 importFrom(readxl,read_xlsx)
 importFrom(scales,percent)
 importFrom(stringr,str_count)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_pad)
 importFrom(stringr,str_remove_all)
+importFrom(stringr,str_split)
 importFrom(tidyr,fill)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,separate_rows)
