#2 faster Levenshtein distance

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,9 +24,9 @@ Imports:
     openxlsx,
     crayon,
     remotes,
-    RecordLinkage,
     scales,
-    purrr
+    purrr,
+    stringdist
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
