faster Levenshtein distance pt.2

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,13 +9,13 @@ export(handle_obvious_dups)
 export(read_Citavi_xlsx)
 export(write_Citavi_xlsx)
 import(dplyr)
-importFrom(RecordLinkage,levenshteinSim)
 importFrom(janitor,make_clean_names)
 importFrom(magrittr,"%>%")
 importFrom(openxlsx,write.xlsx)
 importFrom(purrr,map)
 importFrom(readxl,read_xlsx)
 importFrom(scales,percent)
+importFrom(stringdist,stringdist)
 importFrom(stringr,str_count)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_pad)
