--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,7 +26,9 @@ Imports:
     remotes,
     scales,
     purrr,
-    stringdist
+    stringdist,
+    RcppAlgos,
+    tictoc
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
