--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,8 @@ export(handle_obvious_dups)
 export(read_Citavi_xlsx)
 export(write_Citavi_xlsx)
 import(dplyr)
+import(tictoc)
+importFrom(RcppAlgos,comboGeneral)
 importFrom(janitor,make_clean_names)
 importFrom(magrittr,"%>%")
 importFrom(openxlsx,write.xlsx)
@@ -18,6 +20,7 @@ importFrom(scales,percent)
 importFrom(stringdist,stringdist)
 importFrom(stringr,str_count)
 importFrom(stringr,str_detect)
+importFrom(stringr,str_length)
 importFrom(stringr,str_pad)
 importFrom(stringr,str_remove_all)
 importFrom(stringr,str_split)
@@ -25,5 +28,4 @@ importFrom(tidyr,fill)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,separate_rows)
 importFrom(tidyr,unite)
-importFrom(utils,combn)
 importFrom(utils,tail)
