multiple pot_dup_id per clean_title: collapse

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ importFrom(openxlsx,write.xlsx)
 importFrom(purrr,map)
 importFrom(readxl,read_xlsx)
 importFrom(scales,percent)
+importFrom(stats,na.omit)
 importFrom(stringdist,stringdist)
 importFrom(stringr,str_count)
 importFrom(stringr,str_detect)
