#7 first push: detect_language()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export("%>%")
 export("%not_in%")
+export(detect_language)
 export(example_xlsx)
 export(find_obvious_dups)
 export(find_potential_dups)
@@ -25,6 +26,7 @@ importFrom(stringr,str_length)
 importFrom(stringr,str_pad)
 importFrom(stringr,str_remove_all)
 importFrom(stringr,str_split)
+importFrom(textcat,textcat)
 importFrom(tidyr,fill)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,separate_rows)
