--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,7 +28,8 @@ Imports:
     purrr,
     stringdist,
     RcppAlgos,
-    tictoc
+    tictoc,
+    textcat
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
