--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,6 +31,9 @@ Imports:
     tictoc,
     textcat
 Suggests: 
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    knitr,
+    rmarkdown
 Config/testthat/edition: 3
 Roxygen: list(markdown = TRUE)
+VignetteBuilder: knitr
