--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,6 +1,7 @@
 pandoc: 2.7.3
 pkgdown: 1.6.1
 pkgdown_sha: ~
-articles: {}
-last_built: 2021-02-22T15:12Z
+articles:
+  basic-workflow: basic-workflow.html
+last_built: 2021-02-22T15:27Z
 
