pkgdown without article

--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -2,8 +2,8 @@ pandoc: 2.7.3
 pkgdown: 1.6.1
 pkgdown_sha: ~
 articles:
-  basic-workflow: basic-workflow.html
-last_built: 2021-02-22T16:42Z
+  CitaviR: CitaviR.html
+last_built: 2021-02-22T17:01Z
 urls:
   reference: https://schmidtpaul.github.io/CitaviR//reference
   article: https://schmidtpaul.github.io/CitaviR//articles
