Simplify _pkgdown.yml

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,40 +1,19 @@
-url: https://schmidtpaul.github.io/CitaviR/
-
-navbar:
-  structure:
-    left:
-    - home
-    - intro
-    - reference
-    - articles
-    - tutorials
-    - news
-    right: github
-  components:
-    home:
-      icon: fas fa-home fa-lg
-      href: index.html
-    reference:
-      text: Reference
-      href: reference/index.html
-    github:
-      icon: fab fa-github fa-lg
-      href: https://github.com/SchmidtPaul/CitaviR/
+url: https://schmidtpaul.github.io/CitaviR
 
 reference:
 - title: Core functions
   contents:
-  - '`find_obvious_dups`'
-  - '`handle_obvious_dups`'
-  - '`find_potential_dups`'
-  - '`detect_language`'
+  - find_obvious_dups
+  - handle_obvious_dups
+  - find_potential_dups
+  - detect_language
 
 - title: Dealing with Excel
   contents:
-  - '`read_Citavi_xlsx`'
-  - '`write_Citavi_xlsx`'
+  - read_Citavi_xlsx
+  - write_Citavi_xlsx
 
 - title: Utility
   contents:
   - '`%not_in%`'
-  - '`example_xlsx`'
+  - example_xlsx
