--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,10 +1,10 @@
-pandoc: 2.7.3
+pandoc: 2.11.2
 pkgdown: 1.6.1
 pkgdown_sha: ~
 articles:
   CitaviR: CitaviR.html
-last_built: 2021-02-22T17:14Z
+last_built: 2021-02-23T12:52Z
 urls:
-  reference: https://schmidtpaul.github.io/CitaviR//reference
-  article: https://schmidtpaul.github.io/CitaviR//articles
+  reference: https://schmidtpaul.github.io/CitaviR/reference
+  article: https://schmidtpaul.github.io/CitaviR/articles
 
