--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -17,3 +17,10 @@ reference:
   contents:
   - '`%not_in%`'
   - example_xlsx
+
+authors:
+  Paul Schmidt:
+    href: "https://github.com/SchmidtPaul"
+  BioMath:
+    href: "https://www.biomath.de/"
+    html: "<img src='https://media-exp1.licdn.com/dms/image/C4E1BAQEjQ12-0ixQWg/company-background_10000/0/1519799083680?e=1614186000&v=beta&t=iGJnm3T9AwNju_nKP5DVVaM2DsymcIJFh-8PatLF0Sc' height=24>"
