--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,9 +1,14 @@
+^\.Rprofile$
+^.github/.
 ^.*\.Rproj$
 ^\.Rproj\.user$
-^README\.Rmd$
-^data-raw$
-^\.travis\.yml$
-^appveyor\.yml$
-^_pkgdown\.yml$
-^docs$
-^pkgdown$
+^\.travis.yml
+^\_pkgdown.yml
+^LICENSE
+^data/.
+^vignettes/.
+^logo.png
+^README.Rmd
+^logo.png
+^pkgdown/.
+^\.github$
