--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,7 +16,7 @@ importFrom(janitor,make_clean_names)
 importFrom(magrittr,"%>%")
 importFrom(openxlsx,write.xlsx)
 importFrom(purrr,map)
-importFrom(readxl,read_xlsx)
+importFrom(readxl,read_excel)
 importFrom(scales,percent)
 importFrom(stats,na.omit)
 importFrom(stringdist,stringdist)
