--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,8 +38,9 @@ Imports:
 Suggests: 
     testthat (>= 3.0.0),
     knitr,
-    rmarkdown,
-    emo
+    rmarkdown
 Config/testthat/edition: 3
 Roxygen: list(markdown = TRUE)
 VignetteBuilder: knitr
+Depends: 
+    R (>= 2.10)
