--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,8 +9,8 @@ export(find_potential_dups)
 export(handle_obvious_dups)
 export(read_Citavi_xlsx)
 export(write_Citavi_xlsx)
+import(crayon)
 import(dplyr)
-import(tictoc)
 importFrom(RcppAlgos,comboGeneral)
 importFrom(janitor,make_clean_names)
 importFrom(magrittr,"%>%")
