--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -3,7 +3,8 @@ pkgdown: 1.6.1
 pkgdown_sha: ~
 articles:
   CitaviR: CitaviR.html
-last_built: 2021-03-16T14:26Z
+  obv_pot_dups: obv_pot_dups.html
+last_built: 2021-03-18T15:56Z
 urls:
   reference: https://schmidtpaul.github.io/CitaviR/reference
   article: https://schmidtpaul.github.io/CitaviR/articles
