--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,15 +3,25 @@
 export("%>%")
 export("%not_in%")
 export(detect_language)
-export(example_xlsx)
+export(example_file)
 export(find_obvious_dups)
 export(find_potential_dups)
 export(handle_obvious_dups)
+export(read_Citavi_ctv6)
 export(read_Citavi_xlsx)
+export(update_Citavi_ctv6)
 export(write_Citavi_xlsx)
 import(crayon)
 import(dplyr)
+importFrom(DBI,dbClearResult)
+importFrom(DBI,dbConnect)
+importFrom(DBI,dbDisconnect)
+importFrom(DBI,dbListTables)
+importFrom(DBI,dbReadTable)
+importFrom(DBI,dbSendQuery)
+importFrom(RSQLite,SQLite)
 importFrom(RcppAlgos,comboGeneral)
+importFrom(dplyr,as_tibble)
 importFrom(janitor,make_clean_names)
 importFrom(magrittr,"%>%")
 importFrom(openxlsx,write.xlsx)
@@ -29,6 +39,7 @@ importFrom(stringr,str_split)
 importFrom(textcat,textcat)
 importFrom(tidyr,fill)
 importFrom(tidyr,pivot_longer)
+importFrom(tidyr,replace_na)
 importFrom(tidyr,separate_rows)
 importFrom(tidyr,unite)
 importFrom(utils,tail)
